# rocm_dev

./: .gitignore  bench.py  grid.py  install_omniperf.sh  parity.py  project_class.py
projects/: common.cuh
projects/async_gemm/: bench.cu  consumer.cu  core.cu  producer.cu  producer_b.cu  src.cu  test.cu
projects/async_gemm_16x16x64/: bench.cu  core.cu  producer.cu
projects/async_gemm_blanes/: bench.cu  consumer.cu  core.cu  producer.cu  sparse_k.cu  src.cu  test.cu
projects/async_gemm_blanes_sparse/: bench.cu  consumer.cu  core.cu  producer.cu  skinny_gemm.cu  sparse_k.cu  test.cu  utils.cuh
projects/async_gemm_blanes_sparse/consumers/: consumers.cuh  mfma_16x16x32_consumer.cu  smfma_16x16x64_consumer.cu
projects/async_gemm_blanes_sparse/producers/: 2_full_tiles.cu  4_full_tiles.cu  4_half_tiles.cu  n_full_tiles.cu
projects/async_gemm_sparse/: consumer.cu  core.cu  producer.cu  sparse_k.cu  test.cu
projects/better_barriers/: bench.cu  src.cu
projects/better_loops/: bench.cu  src.cu  test.cu
projects/encoded_ar8/: CMakeLists.txt  ear_class.py  ear_core.cu  ear_engine.cu  ear_kernel.cu  ear_qdq.cu  install.sh  setup.py  test.py
projects/global_sync/: bench.cu  src.cu  test.cu
projects/skinny_gemm/: bench.cu  constraints.py  core.cu  prof.cu  setup.py  skinny_gemm.cu  skinny_gemm_binding.cu  skinny_gemm_caller.cu  skinny_gemm_kernel.cu  test.cu  utils.cuh  utils_hip.cuh
projects/skinny_gemm/consumers/: consumers.cuh  consumers_hip.cuh  (+3 more)
projects/tiled_sum_reduce/: src.cu  test.cu
projects/tiled_sum_reduce_async/: bench.cu  src.cu  test.cu
(+3 files in other folders)
